Frontend completo